# course_work_5

./: .gitignore  README.md  main.py  pyproject.toml
classes/: DBManager.py
utils/: utils.py
